[package]
name = "critbit-tree-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.0"
static_assertions = "1.1.0"
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
solana-program = "1.6.18"
thiserror = "1.0.20"


[dev-dependencies]
rand = "0.8.5"
hexdump = "0.1.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
bumpalo = { version = "3.4.0", features = ["collections"] }
